--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -29,7 +29,7 @@ jobs:
         make -j $(nproc)
         sudo make install
         popd
-        tar -C /opt -cf ./${{ matrix.arch }}.tar.zst --use-compress-program="pzstd" apptainer
+        tar -C /opt -cf ./${{ matrix.arch }}.tar.zst --use-compress-program="zstdmt -18" apptainer
     - id: check-tag
       run: |
         if [[ ${{ github.ref }} =~ ^refs/tags/v[1-9][0-9]*\.[0-9]+\.[0-9]+$ ]]; then
